<resources>
    <string name="app_name">Calorie Tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LoginUsername_editText">Username</string>
    <string name="LoginButton">Login</string>
    <string name="LoginPassword_editText">Password</string>
    <string name="addStepsBtn">+</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"></string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_my_daily_diet">My daily diet</string>
    <string name="menu_map">Map</string>
    <string name="menu_steps">Steps</string>
    <string name="menu_report">Report</string>
    <string name="menu_calorie">Calorie tracker</string>
    <string name="signup_message">No account yet? <b>Create one</b></string>
    <string name="preference_file_key">com.calorieTracker_sp</string>
    <string name="dialog_steps_hint">Enter number of steps</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="clear_room">Clear db</string>
    <string name="update">Update</string>
    <string name="Logout">Logout</string>
    <string name="home_fragment_welcome">Welcome</string>
    <string name="fitness_pic">Fitness pic</string>
    <string name="calorie_goal_hint">Enter your calorie goal for today</string>
    <string name="dialog_calories_hint">Enter goal calories for today</string>
    <string name="preference_calorie_goal">calorie_goal</string>

    <string-array name="level_of_activities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="food_categories">
        <item>Other</item>
        <item>Drink</item>
        <item>Meal</item>
        <item>Meat</item>
        <item>Snack</item>
        <item>Bread</item>
        <item>Cake</item>
        <item>Fruit</item>
        <item>Vegies</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="diet_category_label">Category</string>
    <string name="dialog_new_food_hint">New food name</string>
    <string name="goal_message">Your goal calories for today</string>
    <string name="cal_consumed_message">Calories consumed today:</string>
    <string name="total_calories_consumed">No logged food yet </string>
    <string name="burned_calories_message">Calories you have burned:</string>
    <string name="burned_calories">0</string>
    <string name="calorie_goal_message">Set the goal please!</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="launch_report_service">Send report</string>
    <string name="total_step_taken_message">Total steps taken</string>
</resources>
