<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calorie"
            android:title="@string/menu_calorie"/>
        <item
            android:id="@+id/nav_diet"
            android:title="@string/menu_my_daily_diet" />
        <item
            android:id="@+id/nav_steps"
            android:title="@string/menu_steps" />
        <item
            android:id="@+id/nav_report"
            android:title="@string/menu_report"/>
        <item
            android:id="@+id/nav_map"
            android:title="@string/menu_map" />
    </group>

</menu>
