<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalorieTrackerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/cal_goal_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_16_dp"
            android:text="@string/goal_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/calories_goal_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calorie_goal_message"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/total_steps_taken_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_16_dp"
            android:text="@string/total_step_taken_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/totalStepTakenTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/burned_calories"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/total_cal_consumed_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_16_dp"
            android:text="@string/cal_consumed_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/total_calories_consumed_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_calories_consumed"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/burned_calories_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_16_dp"
            android:text="@string/burned_calories_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/burned_calories_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/burned_calories"
            android:textSize="36sp" />

    </LinearLayout>

</FrameLayout>
