<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFragmentId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_16_dp">

        <EditText
            android:id="@+id/login_usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/LoginUsername_editText" />

        <EditText
            android:id="@+id/login_passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textPassword"
            android:text="@string/LoginPassword_editText" />

        <Button
            android:id="@+id/LoginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginButton" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/signupLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:clickable="true"
            android:text="@string/signup_message" />

    </LinearLayout>

</FrameLayout>
