<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/home_background_pic"
            android:layout_width="match_parent"
            android:layout_height="605dp"
            android:contentDescription="@string/fitness_pic"
            android:scaleType="centerCrop"
            android:src="@drawable/background_pic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="113dp" />

        <TextView
            android:id="@+id/home_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:gravity="center"
            android:text="@string/home_fragment_welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

        <TextView
            android:id="@+id/home_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:capitalize="words"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

        <TextView
            android:id="@+id/home_currentDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/home_calorie_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/calorie_goal_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

</FrameLayout>
